<!--
	Copyright (c) 2011, 2014 IBM Corporation.

	All rights reserved. This program and the accompanying materials
	are made available under the terms of the Eclipse Public License v1.0
	and Eclipse Distribution License v. 1.0 which accompanies this distribution.

	The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
	and the Eclipse Distribution License is available at
	http://www.eclipse.org/org/documents/edl-v10.php.

	Contributors:

	   Steve Speicher - initial API and implementation
	   Yuhong Yin
	   Samuel Padgett - set UTF-8 source encoding
	   Samuel Padgett - created shaded JAR with dependencies during build
	   Samuel Padgett - update Maven group ID and artifact ID
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.eclipse.lyo.testsuite</groupId>
    <artifactId>lyo-testsuite-build</artifactId>
    <version>5.0.1-SNAPSHOT</version>
    <relativePath>../org.eclipse.lyo.testsuite.build/pom.xml</relativePath>
  </parent>

  <artifactId>testsuite-server</artifactId>
  <name>OSLC Implementation Assessment Test</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <skipTests>true</skipTests> <!-- run mvn with -DskipTests=false -->
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>
  <scm>
    <url>http://git.eclipse.org/c/lyo/org.eclipse.lyo.testsuite.git</url>
  </scm>

  <profiles>
    <profile>
      <id>doclint-java8-disable</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      <properties>
        <javadoc.opts>-Xdoclint:none</javadoc.opts>
      </properties>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>lyo-releases</id>
      <name>Eclipse Lyo Releases</name>
      <url>https://repo.eclipse.org/content/repositories/lyo-releases/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>lyo-snapshots</id>
      <name>Eclipse Lyo Snapshots</name>
      <url>https://repo.eclipse.org/content/repositories/lyo-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>

  <dependencies>
    <!-- https://stackoverflow.com/questions/52502189/java-11-package-javax-xml-bind-does-not-exist -->
    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>2.3.3</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.14</version>
    </dependency>

    <dependency>
      <groupId>net.oauth.core</groupId>
      <artifactId>oauth</artifactId>
      <version>20090617</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>net.oauth.core</groupId>
      <artifactId>oauth-httpclient3</artifactId>
      <version>20090617</version>
    </dependency>

    <dependency>
      <groupId>org.apache.wink</groupId>
      <artifactId>wink-json4j</artifactId>
      <version>1.4</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-core</artifactId>
     <!-- <version>2.13.0</version> -->
      <version>5.5.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpcore</artifactId>
      <version>4.4.16</version>
    </dependency>

    <dependency>
      <groupId>xml-apis</groupId>
      <artifactId>xml-apis</artifactId>
      <version>2.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>2.3.9</version>
      <scope>runtime</scope>
    </dependency>

    <!-- Added undeclared dependencies -->
    <dependency>
      <groupId>org.apache.abdera</groupId>
      <artifactId>abdera-core</artifactId>
      <version>1.1.3</version>
    </dependency>
    <dependency>
      <groupId>org.apache.ws.commons.axiom</groupId>
      <artifactId>axiom-api</artifactId>
      <version>1.2.10</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.reload4j</groupId>
      <artifactId>reload4j</artifactId>
      <version>1.2.26</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.17</version>
    </dependency>
    <dependency>
      <groupId>org.apache.abdera</groupId>
      <artifactId>abdera-i18n</artifactId>
      <version>1.1.3</version>
    </dependency>

    <!--  Transitive CVEs address  -->
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.18.0</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.2</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Source Jar Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>3.5.3</version>
      </plugin>

      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.44.5</version>
        <configuration>
          <!-- optional: limit format enforcement to just the files changed by this feature branch -->
          <!--                    <ratchetFrom>origin/main</ratchetFrom>-->
          <formats>
            <!-- you can define as many formats as you want, each is independent -->
            <format>
              <!-- define the files to apply to -->
              <includes>
                <include>.gitattributes</include>
                <include>.gitignore</include>
              </includes>
              <!-- define the steps to apply to those files -->
              <trimTrailingWhitespace/>
              <endWithNewline/>
              <indent>
                <tabs>true</tabs>
                <spacesPerTab>4</spacesPerTab>
              </indent>
            </format>
          </formats>
          <!-- define a language-specific format -->
          <java>
            <!-- apply a specific flavor of google-java-format and reflow long strings -->
            <googleJavaFormat>
              <version>1.19.2</version>
              <style>AOSP</style>
              <reflowLongStrings>true</reflowLongStrings>
              <formatJavadoc>false</formatJavadoc>
            </googleJavaFormat>
          </java>
        </configuration>
      </plugin>
    </plugins>
    <testSourceDirectory>${basedir}/src/main/java</testSourceDirectory>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>3.5.3</version>
      </plugin>
    </plugins>
  </reporting>
</project>
